rahhhh aussa doesnt get updated

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -136,21 +136,21 @@
  FRA_ADJ:0 "BC"
  FRA_subject:0 "$OVERLORDADJ$ $FRA$"
  FRA_subject_DEF:0 "$OVERLORDADJ$ $FRA$"
- LUX_fascism:0 "Greater Luxembourg"
- LUX_fascism_DEF:0 "Greater Luxembourg"
- LUX_democratic:0 "Luxembourg"
- LUX_democratic_DEF:0 "Luxembourg"
- LUX_neutrality:0 "Royalist Luxembourg"
- LUX_neutrality_DEF:0 "Royalist Luxembourg"
- LUX_communism:0 "Rosa Luxembourg"
- LUX_communism_DEF:0 "Rosa Luxembourg"
- LUX_fascism_ADJ:0 "Luxembourg"
- LUX_democratic_ADJ:0 "Luxembourg"
- LUX_neutrality_ADJ:0 "Luxembourg"
- LUX_communism_ADJ:0 "Luxembourg"
- LUX:0 "Luxembourg"
- LUX_DEF:0 "Luxembourg"
- LUX_ADJ:0 "Luxembourg"
+ LUX_fascism:0 "Greater Lion"
+ LUX_fascism_DEF:0 "Greater Lion"
+ LUX_democratic:0 "Lion"
+ LUX_democratic_DEF:0 "Lion"
+ LUX_neutrality:0 "Royalist Lion"
+ LUX_neutrality_DEF:0 "Royalist Lion"
+ LUX_communism:0 "Rosa Lion"
+ LUX_communism_DEF:0 "Rosa Lion"
+ LUX_fascism_ADJ:0 "Lion"
+ LUX_democratic_ADJ:0 "Lion"
+ LUX_neutrality_ADJ:0 "Lion"
+ LUX_communism_ADJ:0 "Lion"
+ LUX:0 "Lion"
+ LUX_DEF:0 "Lion"
+ LUX_ADJ:0 "Lion"
  BEL_fascism:0 "Waffle"
  BEL_fascism_DEF:0 "Waffle"
  BEL_democratic:0 "Waffle"
@@ -267,8 +267,8 @@
  EST_democratic_DEF:0 "the Republic of Livonia"
  EST_neutrality:0 "Hestia"
  EST_neutrality_DEF:0 "Hestia"
- EST_communism:1 "Estonian People's Republic"
- EST_communism_DEF:1 "the Estonian People's Republic"
+ EST_communism:1 "Hestia People's Republic"
+ EST_communism_DEF:1 "the Hestia People's Republic"
  EST_fascism_ADJ:0 "Estonum"
  EST_democratic_ADJ:0 "Estonian"
  EST_neutrality_ADJ:0 "Estonian"
@@ -380,7 +380,7 @@
  SWI_democratic_subject:0 "$OVERLORDADJ$ Helvetia"
  SWI_democratic_subject_DEF:0 "Helvetic"
  SWI:0 "Neutrality"
- SWI_DEF:0 "Switzerland"
+ SWI_DEF:0 "Neutrality"
  SWI_ADJ:0 "Swiss"
  TUR_fascism:1 "Kebab Empire"
  TUR_fascism_DEF:1 "Kebab Empire"
@@ -411,8 +411,8 @@
  GRE_democratic_ADJ:0 "Hellenic"
  GRE_neutrality_ADJ:0 "Greek"
  GRE_communism_ADJ:0 "Greek"
- GRE:0 "Greece"
- GRE_DEF:0 "Greece"
+ GRE:0 "Hoplite"
+ GRE_DEF:0 "Hoplite"
  GRE_ADJ:0 "Greek"
  GRE_subject:0 "$OVERLORDADJ$ $GRE$"
  GRE_subject_DEF:0 "$OVERLORDADJ$ $GRE$"
@@ -430,8 +430,8 @@
  ALB_democratic_ADJ:0 "Albanian"
  ALB_neutrality_ADJ:0 "Albanian"
  ALB_communism_ADJ:0 "Albanian"
- ALB:0 "Albania"
- ALB_DEF:0 "Albania"
+ ALB:0 "Kruja"
+ ALB_DEF:0 "Kruja"
  ALB_ADJ:0 "Albanian"
  ALB_subject:0 "$OVERLORDADJ$ $ALB$"
  ALB_subject_DEF:0 "$OVERLORDADJ$ $ALB$"
@@ -566,8 +566,8 @@
  AFG_democratic_ADJ:0 "Afghan"
  AFG_neutrality_ADJ:0 "Afghan"
  AFG_communism_ADJ:0 "Afghan"
- AFG:0 "Afghanistan"
- AFG_DEF:0 "Afghanistan"
+ AFG:0 "Babur"
+ AFG_DEF:0 "Babur"
  AFG_ADJ:0 "Afghan"
  ARG_fascism:0 "Aconcagua League"
  ARG_fascism_DEF:0 "Aconcagua League"
@@ -876,20 +876,20 @@
  MON:0 "Morin khuur"
  MON_DEF:0 "Morin khuur"
  MON_ADJ:0 "Mongolian"
- NEP_fascism:0 "Himalayan Empire"
- NEP_fascism_DEF:0 "the Himalayan Empire"
- NEP_democratic:0 "Federal Republic of Nepal"
- NEP_democratic_DEF:0 "the Federal Republic of Nepal"
- NEP_neutrality:0 "Nepal"
- NEP_neutrality_DEF:0 "Nepal"
- NEP_communism:0 "Communist State of Nepal"
- NEP_communism_DEF:0 "the Communist State of Nepal"
+ NEP_fascism:0 "Everest Empire"
+ NEP_fascism_DEF:0 "the Everest Empire"
+ NEP_democratic:0 "Federal Republic of Everest"
+ NEP_democratic_DEF:0 "the Federal Republic of Everest"
+ NEP_neutrality:0 "Everest"
+ NEP_neutrality_DEF:0 "Everest"
+ NEP_communism:0 "Communist State of Everest"
+ NEP_communism_DEF:0 "the Communist State of Everest"
  NEP_fascism_ADJ:0 "Nepali"
  NEP_democratic_ADJ:0 "Nepali"
  NEP_neutrality_ADJ:0 "Nepali"
  NEP_communism_ADJ:0 "Nepali"
- NEP:0 "Nepal"
- NEP_DEF:0 "Nepal"
+ NEP:0 "Everest"
+ NEP_DEF:0 "Everest"
  NEP_ADJ:0 "Nepali"
  NIC_fascism:1 "Brochetas Junta"
  NIC_fascism_DEF:1 "the Brochetas Junta"
@@ -993,8 +993,8 @@
  SAF_democratic_ADJ:0 "South African"
  SAF_neutrality_ADJ:0 "South African"
  SAF_communism_ADJ:0 "South African"
- SAF:0 "South Africa"
- SAF_DEF:0 "South Africa"
+ SAF:0 "Mzansi"
+ SAF_DEF:0 "Mzansi"
  SAF_ADJ:0 "South African"
  SAU_fascism:0 "Tayaran Empire"
  SAU_fascism_DEF:0 "the Tayaran Empire"
@@ -1129,12 +1129,12 @@
  NZL_communism:0 "People's Republic of Aotearoa"
  NZL_communism_DEF:0 "the People's Republic of Aotearoa"
  NZL_fascism_ADJ:0 "Kiwi Empire"
- NZL_democratic_ADJ:0 "New Zealand"
- NZL_neutrality_ADJ:0 "New Zealand"
+ NZL_democratic_ADJ:0 "Kiwi"
+ NZL_neutrality_ADJ:0 "Kiwi"
  NZL_communism_ADJ:0 "Aotearoan"
- NZL:0 "New Zealand"
- NZL_DEF:0 "New Zealand"
- NZL_ADJ:0 "New Zealand"
+ NZL:0 "Kiwi"
+ NZL_DEF:0 "Kiwi"
+ NZL_ADJ:0 "Kiwi"
  URG_fascism:0 "New Constitutional Faina"
  URG_fascism_DEF:0 "New Constitutional Faina"
  URG_democratic:0 "Faina"
@@ -1389,8 +1389,8 @@
  KOR_democratic_ADJ:0 "Korean"
  KOR_neutrality_ADJ:0 "Korean"
  KOR_communism_ADJ:0 "Korean"
- KOR:0 "Korea"
- KOR_DEF:0 "Korea"
+ KOR:0 "Nagurea"
+ KOR_DEF:0 "Nagurea"
  KOR_ADJ:0 "Korean"
  SER_fascism:0 "Serbian Empire"
  SER_fascism_DEF:0 "the Serbian Empire"
