--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3930,12 +3930,12 @@
  AFA_democratic_DEF:0 "the Afar Republic"
  AFA_communism:0 "Revolutionary Democratic Union of Afar"
  AFA_communism_DEF:0 "the Revolutionary Democratic Union of Afar"
- AFA_neutrality:1 "Sultanate of Aussa"
- AFA_neutrality_DEF:1 "the Sultanate of Aussa"
+ AFA_neutrality:1 "Sultanate of Awsa"
+ AFA_neutrality_DEF:1 "the Sultanate of Awsa"
  AFA_ETH_neutrality_subject:0 "Afar Autonomous Region"
  AFA_ETH_neutrality_subject_DEF:0 "the Afar Autonomous Region"
- AFA_ITA_fascism_subject:0 "Aussa Governorate"
- AFA_ITA_fascism_subject_DEF:0 "the Aussa Governorate"
+ AFA_ITA_fascism_subject:0 "Awsa Governorate"
+ AFA_ITA_fascism_subject_DEF:0 "the Awsa Governorate"
  AFA_fascism_ADJ:0 "Afar"
  AFA_democratic_ADJ:0 "Afar"
  AFA_communism_ADJ:0 "Afar"
