--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2095,7 +2095,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   ITA_integrate_the_mediterranean_states_desc:0 "We must begin a process to unite all the states into one banner, the communist banner, and complete their integration into our great communist ideals."
   ITA_form_the_union_of_mediterranean_republics:0 "Form The Union Of Mediterranean Republics"
   ITA_form_the_union_of_mediterranean_republics_desc:0 "After years of work uniting the mediterranean and neighbouring population through communist indoctrination we have managed to come with the final solution to all of our problems: The Union of Mediterranean Republics. A nation for the workers, by the workers."
-  ITA_the_union_marches_forward:0 "TThe Union Marches Forward"
+  ITA_the_union_marches_forward:0 "The Union Marches Forward"
   ITA_the_union_marches_forward_desc:0 "The Mediterranean Union shines brighter than ever. We shall show the world that our communism is true to Marx's ideals as per her famous book \"Das Kapital\". A new era begins for the revolution of the proletariat"
   ITA_destroy_capitalism:0 "Destroy Capitalism"
   ITA_destroy_capitalism_desc:0 "With the threat of fascism long gone, it's time to tackle our biggest enemy: Capitalism. We shall mobilize to attack and destory all anti-communist ideas, whatever the cost may be."
