--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2310,11 +2310,14 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   ITE:0 "Kingdom of Anzio"
   ITP:0 "Anchovy's Anzio"
   ITA_Mussolinism:0 "Anchovysm"
+  ITA_Long_Mussolinism:0 "Anchovysm"
   separation_movement:0 "§YStrange things will happen in Anzio..."
   anchovy_reborn:0 "§GSince we're attacking from 3 directions, Operation Three Cheese Pizza!"
   three_way_war:0 "§RAnchovy will reunify all of the partitions... by force!"
   mussolinis_paranoia:0 "Anchovy's Paranoia"
   mussolinism:0 "Anchovysm"
+  ITA_Caesar:0 "Caesar Imperial Party"
+  ITA_Long_Caesar:0 "Caesar Imperial Party"
   foreign_ideas:0 "Foreign License Production"
   ITA_learn_eng:0 "Learn from St. Gloriana"
   ITA_learn_usa:0 "Learn from Saunders"
