--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- LOADING_TIP_0:0 "Excellence is not a choice; it's the only path in the Nishizumi Style. Precision in every move, victory in every battle.\n- Miho Nishizumi"
+ LOADING_TIP_0:0 "Excellence is not a choice; it's the only path in the Nishizumi Style. Precision in every move, victory in every battle.\n- Maho Nishizumi"
  LOADING_TIP_1:0 "The Nishizumi way is forged through discipline and flawless execution. In the tank, as in life, there is no room for error.\n- Maho Nishizumi"
  LOADING_TIP_2:0 "In the heat of battle, calm minds prevail. The Nishizumi Style teaches us to be the eye of the storm, unwavering and focused.\n- Maho Nishizumi"
  LOADING_TIP_3:0 "Victory is not a gift; it's earned through rigorous training and adherence to the Nishizumi principles of tankery.\n- Maho Nishizumi"
@@ -80,3 +80,13 @@
  LOADING_TIP_78:0 "In the pursuit of victory, don't forget to enjoy the ride! Saunders, let the tank engines roar with happiness!\n- Kay"
  LOADING_TIP_79:0 "Saunders tanks, where laughter is the best strategy, and every victory is a celebration of the joy of battle!\n- Kay"
  LOADING_TIP_80:0 "Let the tanks roll and the laughter echo – at Saunders, we believe in the power of joy and victory on the battlefield!\n- Kay"
+ LOADING_TIP_81:0 "In the world of tanks, courage is our armor, determination our shield. With every challenge, we rewrite the story of triumph and camaraderie.\n- Miho Nishizumi"
+ LOADING_TIP_82:0 "Tankery isn't just a battle of machines; it's a canvas where strategy paints the colors of victory, and our bonds create the masterpiece.\n- Miho Nishizumi"
+ LOADING_TIP_83:0 "A commander leads not only with tactics but with a heart that beats in sync with her team. Together, we are an unstoppable force on the battlefield.\n- Miho Nishizumi"
+ LOADING_TIP_84:0 "Victory is not solely defined by the number of flags captured; it's etched in the moments when friendship withstands the echoes of gunfire.\n- Miho Nishizumi"
+ LOADING_TIP_85:0 "In the dance of tanks, each movement is a step toward victory. Embrace the rhythm, and you'll find a symphony of teamwork that conquers all.\n- Miho Nishizumi"
+ LOADING_TIP_86:0 "The true strength of a commander lies not just in giving orders but in fostering a spirit that turns challenges into stepping stones toward triumph.\n- Miho Nishizumi"
+ LOADING_TIP_87:0 "In the realm of tankery, adversity is a teacher, and every setback is a chance to rewrite our destiny with the ink of resilience.\n- Miho Nishizumi"
+ LOADING_TIP_88:0 "Beyond the steel shells and roaring engines, the heart of tankery beats with the pulse of unity. Together, we're not just a team; we're family.\n- Miho Nishizumi"
+ LOADING_TIP_89:0 "In the crucible of battle, the bonds we forge become the unbreakable chains that link us together, propelling us toward the horizon of victory.\n- Miho Nishizumi"
+ LOADING_TIP_90:0 "In the heat of battle, it's not just about winning or losing. It's about leading with your heart, embracing the unexpected, and forging bonds that withstand the toughest challenges. \n- Miho Nishizumi"
