--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2274,7 +2274,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   french_conquest:0 "BC Conquest"
   british_conquest:0 "Gloriana Conquest"
   iberian_conquest:0 "Iberian Conquest"
-  arabian_conquest:0 "Kruja Conquest"
+  arabian_conquest:0 "Arabian Conquest"
   benelux_conquest:0 "Benelux Conquest"
   albanian_integration:0 "Kruja Integration"
   bulgarian_integration:0 "Yogurt Integration"
