--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2118,7 +2118,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   ITA_restore_monarchist_powers:0 "Restore Power To The Monarchy"
   ITA_restore_monarchist_powers_desc:0 "Giving more power to the Queen is our main agenda. she shall be something more than a public figure, but the main political influence in our nation."
   ITA_the_queens_coronation:0 "The Queen's Coronation"
-  ITA_the_queens_coronation_desc:0 ""
+  ITA_the_queens_coronation_desc:0 "Pepperoni has long sought the crown of Anzio, but despite her constant moaning about it, was never given her chance to rule, but with recent developments it seems only right to grant her this honour therefor making her Pepperoni the 1st Queen of Anzio."
   ITA_the_queens_economy:0 "The Queen's Economy"
   ITA_the_queens_economy_desc:0 "To rebuild our empire we must start by setting our accounts straight. Rebuilding the empire's economic influence and our trade with the rest of the world should be our main priority."
   ITA_the_queens_army:0 "The Queen's Army"
@@ -2288,6 +2288,18 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   british_integration:0 "Gloriana Integration"
   iberian_integration:0 "Iberian Integration"
   arabian_integration:0 "Arabian Integration"
+  albania_integrate:0 "Kruja Integrated"
+  bulgaria_integrate:0 "Yogurt Integrated"
+  greece_integrate:0 "Hoplite Integrated"
+  hungaria_integrate:0 "Turul Integrated"
+  romania_integrate:0 "Romanian Integrated"
+  turkey_integrate:0 "Kebab Integrated"
+  yugoslavia_integrate:0 "Brazava Integrated"
+  france_integrate:0 "BC Integrated"
+  benelux_integrate:0 "Benelux Integrated"
+  britain_integrate:0 "Gloriana Integrated"
+  iberia_integrate:0 "Iberia Integrated"
+  arabia_integrate:0 "Arabia Integrated"
 
   # Country LeadersForces
   ITA_amaretto:0 "Amaretto"
