--- a/localisation/english/gup_events_decisions_l_english.yml
+++ b/localisation/english/gup_events_decisions_l_english.yml
@@ -504,6 +504,7 @@
  kmm.11.a: "Teach them how to say goodbye!"
  kmm.11.b: "Didn't I do enough, commander?!"
  kmm.11.c: "Goodbye, sis..."
+ kmm.11.e: "§tBut your simps await you, Maho-sama!§! \n(She stays)"
  kmm.12.t: "Maho Nishizumi retains Fieldsmanship"
  kmm.12.d: "Maho has declared that she will not be leaving her position as Kuromorimine's field marshal. A truly welcoming declaration for many as parades flow over in celebration in many parts of the Reich."
  kmm.12.a: "Awesome!"
@@ -524,6 +525,7 @@
  kmm.8.a: "Kuromorimine's future lies in Erika."
  kmm.8.b: "Miho's compassion and humility will break the years of shame our Reich has gone through."
  GER_ACTIONS_HAVE_CONSEQUENCES: "§RActions have consequences. Whether good or bad.§!\n\n"
+ kmm.8.c: "§tBut your simps await you, Maho-sama!§! \n(§RThe Mahussy§! is too good)"
  kmm.9.t: "Erika blockades Berlin!"
  kmm.9.d: "With Miho taking pre-emptive measures in leadership, Erika has been enraged by her actions. With immediate control over the military, Erika has ordered the military to take the ranks of Berlin and encircle her. \n\nMiho finds out 2 hours later and issues an apologitic resignation citing that she only took pre-emptive action to await Erika's entrance and congratulate her. \n\nIt would seem to have been more bloodier had the situation escalated."
  kmm.9.a: "Doubtful. Back to work!"
