Civil War Pt.2 ( 4 Hours )

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2342,7 +2342,26 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   ## SCHHIZO ##
   
   SDF:0 "Sozialistische Demokratische Kuromorimine"
+  SDF_DEF:0 "Kuromorimine"
+  SDF_ADJ:0 "Kuromorimine"
+  
+  SDF_fascism_party:0 "F-R Coalition"
+  SDF_fascism_party_long:0 "Far Right Wing Coalition"
+  SDF_democratic_party:0 "C-L Coalition"
+  SDF_democratic_party_long:0 "Centre Left Coalition"
+  SDF_communism_party:0 "F-L Coalition"
+  SDF_communism_party_long:0 "Far Left Coalition"
+  SDF_neutrality_party:0 "C-R Coalition"
+  SDF_neutrality_party_long:0 "Centre Right Coalition"
+  
+  
   SDF_saori_takebe:0 "Heerfuhrer Saori Takebe"
+  sdf_ig_faben:0 "Ooarai Oil"
+  sdf_krupp:0 "Krupp"
+  sdf_siemens:0 "Frankfurt Electricity"
+  popular_author:0 "Popular Author"
+  head_of_security:0 "Head of the K.I.A"
+  forign_minister2:0 "Foreign Affairs Minister"
   
   ##IDEAS##
   sdf_army_w_state:0 "Army With a State"
@@ -2351,6 +2370,8 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   sdf_revolutionary_fevor_desc:0 "We fight for true strength for our people, not that of the insanity of liberty or the illusion of strength"
   sdf_battle_for_freedom:0 "Liberation War"
   sdf_battle_for_freedom_desc:0 "We cannot fail our people, we must win no matter the cost for the Strength and will of the nation"
+  sdf_war_lost:0 "All or Nothing!"
+  sdf_war_time_reforms:0 "Wartime Reforms"
   
   ##FOCUS##
   SDF_wacht_am_rhien:0 "Die Wacht Am Rhein"
@@ -2360,12 +2381,30 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_ooarai_cells:0 "Ooarai PMC Cells"
   SDF_ooarai_cells_desc:0 "Though in Kuromormine we may have allies, we still have friends in places like Ooarai perhaps we could call in a few favours."
   SDF_war_liberation:0 "War of Liberation"
-  SDF_war_liberation_desc:0 ""
+  SDF_war_liberation_desc:0 "The time has come for us to battle against the bastards that come to seek to deny our people our revolution, we must fight back no matter the cost"
   SDF_old_stockpiles:0 "Dig up Old Stockpiles"
-  SDF_old_stockpiles_desc:0 ""
+  SDF_old_stockpiles_desc:0 "Years ago the friekorps once operated secret stockpiles after the disastrous defeats upon our nation, and we have thankfully managed to come across their locations they shall serve us well"
   SDF_war_efforts:0 "Kuromorimine War Machine"
-  SDF_war_efforts_desc:0 ""
+  SDF_war_efforts_desc:0 "The war machine must be on its first foot if it is to cope with the great challenges will require of it, the Kuromormine spirit is needed in these trying times."
   SDF_emergency_factories:0 "Emergency Factories"
-  SDF_emergency_factories_desc:0 ""
+  SDF_emergency_factories_desc:0 "Every factory is needed to win this war, from wood working plants to automobile companies all can do their part"
+  SDF_only_chance:0 "For the Fatherland!"
+  SDF_only_chance_desc:0 ""
+  SDF_soup_kitchens:0 "SDK Soup Kitchens"
+  SDF_soup_kitchens_desc:0 ""
+  SDF_civil_militia:0 "Mobilize Civil Militia"
+  SDF_civil_militia_desc:0 ""
+  SDF_implement_wartime_reforms:0 "Implement Wartime Reforms"
+  SDF_implement_wartime_reforms_desc:0 ""
+  SDF_pmc_recruit:0 "SDK Recruitment Campaigns"
+  SDF_pmc_recruit_desc:0 ""
+  SDF_slacken_recruitment:0 "Death or Dishonour"
+  SDF_slacken_recruitment_desc:0 ""
+  SDF_civs1:0 "Expand Our Industrial Capacity"
+  SDF_civs1_desc:0 ""
+  SDF_frankfurt_factories:0 "Prioritize Frankfurt Area"
+  SDF_frankfurt_factories_desc:0 ""
+  SDF_rhein_factories:0 "Prioritize Rhienland"
+  SDF_rhein_factories_desc:0 ""
 
  
