--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2345,6 +2345,10 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_DEF:0 "Kuromorimine"
   SDF_ADJ:0 "Kuromorimine"
   
+  SDF_UNI:0 "United Kuromorimine"
+  SDF_UNI_DEF:0 "Kuromorimine"
+  SDF_UNI_ADJ:0 "Kuromorimine"
+  
   SDF_fascism_party:0 "F-R Coalition"
   SDF_fascism_party_long:0 "Far Right Wing Coalition"
   SDF_democratic_party:0 "C-L Coalition"
@@ -2375,6 +2379,8 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   sdf_battle_for_freedom_desc:0 "We cannot fail our people, we must win no matter the cost for the Strength and will of the nation"
   sdf_war_lost:0 "All or Nothing!"
   sdf_war_time_reforms:0 "Wartime Reforms"
+  sdf_anarchy_3:0 "Anarchy:§R Out of Control§!"
+  sdf_failing_loyalty:0 "Army Loyalty:§O Skeptical§!" 
   
   ##DECISIONS##
   SDF_raise_units:0 "Raising the National Guard"
@@ -2410,14 +2416,38 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_implement_wartime_reforms:0 "Implement Wartime Reforms"
   SDF_implement_wartime_reforms_desc:0 "Whilst the war may have begun sooner then any of us could have foreseen that doesn’t mean we can’t continue pre war reforms. \n \n Simple things like paid leave or Unemployment insurance, though not necessary for a good standard of living can heavily impact our peoples lives and their support of us, rolling back restrictions on breaks and pay we can help the workers like no other would, and make what Pravda would claim only possible through them, A workers Paradise."
   SDF_pmc_recruit:0 "SDK Recruitment Campaigns"
-  SDF_pmc_recruit_desc:0 ""
+  SDF_pmc_recruit_desc:0 "With the war spreading, we need experienced people who all know the true strength needed to save the nation, and many of those people are the friekorps, veterans who have long opposed any attempt to sell out the nation to foreign entities, they understand the true cost required in these trying times, and will be called upon once more to reclaim the nation from the traitors. \n \n Though many are past their prime many more can surely follow in their example and give their lives for the fatherland and its people, just like our leaders father we shall fight to the bitter end no matter the cost"
   SDF_slacken_recruitment:0 "Death or Dishonour"
-  SDF_slacken_recruitment_desc:0 ""
+  SDF_slacken_recruitment_desc:0 "The walls may be closing around us but unlike in the days of old we will not tolerate the stab in the back that destroyed our great nation before, surrender will be account to treason and anyone that advocates for it shall be quartered and shot. \n \n The fatherland shall fight on to the end until we have Endgültiger Sieg with the traitors being thrown back to their foreign masters like the cowards they are"
   SDF_civs1:0 "Expand Our Industrial Capacity"
-  SDF_civs1_desc:0 ""
+  SDF_civs1_desc:0 "Wars are a competition in production, whomever can produce more will usually win over the other side, we need industry if we want to build a war machine. \n \n We must open the valves on the nations industrial power and make the factories turn out mass produced products for the war effort and the peace that will follow it"
   SDF_frankfurt_factories:0 "Prioritize Frankfurt Area"
-  SDF_frankfurt_factories_desc:0 ""
+  SDF_frankfurt_factories_desc:0 "Whilst not maintaining the same sheer industrial output as the Ruhr, the Frankfurt area has been well placed for economic trade and development with dozens of well established banks and other industrial sectors, which could be called upon during trying times such as these, we have the opportunity to use our strengths and expand the existing supply line for industrial output through loans, bailouts and acquisitions of raw materials to build brand new factories across the region."
   SDF_rhein_factories:0 "Prioritize Rhienland"
-  SDF_rhein_factories_desc:0 ""
+  SDF_rhein_factories_desc:0 "The Ruhr remains the biggest industrial sector in all of Kuromormine, it makes up a large portion of the gdp and a even larger part of pre war industrial output, however by retooling numerous factories, selling some coal to BC-Freedom we can increase its output massively and finally at long last show those cowards what we really have planned. \n \n For now we will focus on clearing factories destroyed salvaging them and getting existing plants on a war production footing in time for the end of the war."
 
- 
+  ##POST CIVIL WAR##
+  SDF_victory_civil:0 "Victory for Kuromorimine!"
+  SDF_victory_civil_desc:0 ""
+  SDF_dotted_line_report:0 "Dotted Line Report"
+  SDF_dotted_line_report_desc:0 ""
+  SDF_anarchy_issue:0 "A Country in Need"
+  SDF_anarchy_issue_desc:0 ""
+  SDF_where_to:0 "Who to Rein In?"
+  SDF_where_to_desc:0 ""
+  SDF_east_priority:0 "Eastern Kuromorimine"
+  SDF_east_priority_desc:0 ""
+  SDF_west_priority:0 "Western Heartlands"
+  SDF_west_priority_desc:0 ""
+  SDF_unban_unions:0 "Unban the Unions"
+  SDF_unban_unions_desc:0 ""
+  SDF_workers_rights:0 "Loyal Worker Rights"
+  SDF_workers_rights_desc:0 ""
+  SDF_send_SDK:0 "Send in the SDK"
+  SDF_send_SDK_desc:0 ""
+  SDF_democratic_fascism:0 "Implement Takebeism"
+  SDF_democratic_fascism_desc:0 ""
+  SDF_peoples_representation:0 "Student Representation"
+  SDF_peoples_representation_desc:0 ""
+  SDF_sort_of_stability:0 "Some Sort of Stability"
+  SDF_sort_of_stability_desc:0 ""
