--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2358,8 +2358,18 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_neutrality_party:0 "C-R Coalition"
   SDF_neutrality_party_long:0 "Centre Right Coalition"
   
+  SDF_neutrality_takebeism:0 "UKF"
+  SDF_neutrality_takebeism_long:0 "United Kuromorimine Front"
+  SDF_communism_takebeism:0 "SDKP"
+  SDF_communism_takebeism_long:0 "Sozialistische Demokratische Kuromorimine Party"
+  SDF_democratic_takebeism:0 "RDKA"
+  SDF_democratic_takebeism_long:0 "Right-Democrats Kuromorimine Alliance"
+  SDF_fascism_takebeism:0 "MJTA"
+  SDF_fascism_takebeism_long:0 "Military Junta"
+  
   ##CUSTOM EFFECT TOOLTIPS##
-  SDF_decisions_units:0 "§Unlocks Decisions to Raise Units Across South Kuromorimine§!"
+  SDF_decisions_units:0 "§CUnlocks Decisions to Raise Units Across South Kuromorimine§!"
+  SDF_coring_focus:0 "§CUnlocks Decisions to Core States§!"
   
   ##TRAITS##
   SDF_saori_takebe:0 "Heerfuhrer Saori Takebe"
@@ -2383,7 +2393,13 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   sdf_war_lost:0 "All or Nothing!"
   sdf_war_time_reforms:0 "Wartime Reforms"
   sdf_anarchy_3:0 "Anarchy:§R Out of Control§!"
+  sdf_anarchy_2:0 "Anarchy:§O Getting a Grip§!"
+  sdf_anarchy_1:0 "Anarchy:§O The Worst is Over§!"
   sdf_failing_loyalty:0 "Army Loyalty:§O Skeptical§!" 
+  sdf_unions_1:0 "Unbanned Unions"
+  sdf_unions_2:0 "Loyal Workers and Unions"
+  sdf_takebeism:0 "Party Serves the People!"
+  sdf_student_representation:0 "Student Representation"
   
   ##DECISIONS##
   SDF_raise_units:0 "Raising the National Guard"
@@ -2394,6 +2410,31 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_units_42:0 "Raise a Unit in Saarbrucken"
   SDF_units_55:0 "Raise Loyalist Brigades in Frankfurt"
   SDF_units_51:0 "Deploy the Essen National Guard"
+  ##CORING##
+  SDF_core_states:0 "Taming Kuromorimine"
+  SDF_core_states_763:0 "Core Konigsberg"
+  SDF_core_states_5:0 "Core Ermland-Masuren"
+  SDF_core_states_63:0 "Core Hinterpommern"
+  SDF_core_states_68:0 "Core Ostmark"
+  SDF_core_states_66:0 "Core Niederschlesien"
+  SDF_core_states_67:0 "Core Oberschlesien"
+  SDF_core_states_64:0 "Core Berlin"
+  SDF_core_states_65:0 "Core Sachsen"
+  SDF_core_states_62:0 "Core Vorpommern"
+  SDF_core_states_61:0 "Core Mecklenburg"
+  SDF_core_states_58:0 "Core Holstein"
+  SDF_core_states_909:0 "Core South Schleswig"
+  SDF_core_states_59:0 "Core Hannover"
+  SDF_core_states_56:0 "Core Weser-Ems"
+  SDF_core_states_57:0 "Core Westfalen"
+  SDF_core_states_60:0 "Core Thuringen"
+  SDF_core_states_55:0 "Core Hessen"
+  SDF_core_states_51:0 "Core the North Kuroland"
+  SDF_core_states_42:0 "Core the Southern Kuroland"
+  SDF_core_states_54:0 "Core Franken"
+  SDF_core_states_50:0 "Core Wuttemberg"
+  SDF_core_states_53:0 "Core Niederbayern"
+  SDF_core_states_52:0 "Core Oberbayern"
   
   ##FOCUS##
   SDF_wacht_am_rhien:0 "Die Wacht Am Rhein"
